--- a/index.html
+++ b/index.html
@@ -36,14 +36,9 @@
 					<div id = "error_msg_text"> ??? </div> 
 				</div>
 				
-				<div id = "calc_huffman" class = "add_prob_button prob_entry_width">
+				<div id = "button_template" class = "add_prob_button prob_entry_width template">
 					<img src = "res/ok.svg" class = "prob_edit_icon">
-					<div class = "add_prob_button_text"> Хаффман </div> 
-				</div>
-				
-				<div id = "calc_shannon" class = "add_prob_button prob_entry_width">
-					<img src = "res/ok.svg" class = "prob_edit_icon">
-					<div class = "add_prob_button_text"> Шеннон-Фано </div> 
+					<div class = "add_prob_button_text"> ??? </div> 
 				</div>
 			</div>
 
