--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
 					<img src = "res/ok.svg" class = "prob_edit_icon">
 					<div class = "add_prob_button_text noselect"> ??? </div> 
 				</div>
+				
+				<div id = "github_button" class = "add_prob_button prob_entry_width">
+					<img src = "res/github-mark-white.svg" class = "prob_edit_icon">
+					<div class = "add_prob_button_text noselect"> f3d0rov/msglen </div> 
+				</div>
 			</div>
 
 			<div class = "msglen_workspace">
