--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<script src = "workspace.js"></script>
 		<script src = "ui.js"></script>
 		<script src = "shannon_fano.js"></script>
+		<script src = "huffman.js"></script>
 
 		<!-- ??? Layout gets squished when generating new, longer sequences -->
 		<!-- !!! No clue as to why -->
