symbol multiplication error display

--- a/index.html
+++ b/index.html
@@ -43,8 +43,12 @@
 					<input class = "prob_input" id = "symbol_multiply_input" step="1" min="1" type="text" value="1">
 				</div>
 				
-				<div id = "error_msg" class = "add_prob_button prob_entry_width template">
+				<div id = "error_msg" class = "add_prob_button prob_entry_width error_msg template">
 					<div id = "error_msg_text" class = "noselect"> ??? </div> 
+				</div>
+				
+				<div id = "mult_error_msg" class = "add_prob_button prob_entry_width template">
+					<div id = "mult_error_msg_text" class = "noselect"> Некорректная кратность </div> 
 				</div>
 
 				<div id = "clear_messages_button" class = "add_prob_button prob_entry_width">
