inputmode = 'numeric' for probability inputs

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 						<span class = "prob_index"> 1 </span>
 						<span class = "prob_op"> ) </span>
 					</div>
-					<input class = "prob_input" step="any" type="text" value="0.0">
+					<input class = "prob_input" inputmode="numeric" type="text" value="0.0">
 					<img src = "res/remove.svg" class = "prob_edit_icon remove_prob_button">
 				</div>
 	
@@ -42,7 +42,7 @@
 					<div class = "prob_name">
 						Кратность
 					</div>
-					<input class = "prob_input" id = "symbol_multiply_input" step="1" min="1" type="text" value="1">
+					<input class = "prob_input" id = "symbol_multiply_input" inputmode="numeric" step="1" min="1" type="text" value="1">
 				</div>
 				
 				<div id = "error_msg" class = "add_prob_button prob_entry_width error_msg template">
